Styling fix Newer versions of Nova apply an .overflow-hidden CSS class on the input form which inhibits working with a dropdown. I fixed it by overriding all .overflow-hidden classes inside a .modal or .card class.

--- a/resources/sass/field.scss
+++ b/resources/sass/field.scss
@@ -1,5 +1,6 @@
-.modal, .card {
-  &.overflow-hidden {
+.modal,
+.card {
+  .overflow-hidden {
     overflow: visible !important;
   }
 }
